--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,4 +5,4 @@ repos:
     - id: terraform_fmt
     - id: terraform_tflint
     - id: terraform_checkov
-    # - id: terraform_docs
+    - id: terraform_docs
