--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,7 @@ repos:
     - id: terraform_tflint
     - id: terraform_checkov
     - id: terraform_docs
+- repo: https://github.com/Yelp/detect-secrets
+  rev: v1.1.0
+  hooks:
+    - id: detect-secrets
