--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,8 @@ repos:
     - id: terraform_checkov
     - id: terraform_docs
 - repo: https://github.com/Yelp/detect-secrets
-  rev: v1.1.0
+  rev: v1.4.0
   hooks:
     - id: detect-secrets
+      args: ['--baseline', '.pre-commit-config/.secrets.baseline']
+      exclude: .*/tests/.*
